# jax-landscapes

./: .gitignore  CLAUDE.md  README.md  TEST_COVERAGE.md  pyproject.toml  requirements.txt  setup.py
example/: customizing_potentials_cookbook.ipynb
example/pimc_He_minimize/: README.md  minimize_pimc.py  visualize_minimization.ipynb
example/pimc_He_minimize/N2_cycle1_w0/: run.sh
example/pimc_He_minimize/N2_cycle2_w0/: run.sh
example/pimc_He_minimize/N2_cycle2_w1/: run.sh
example/pimc_He_minimize/N2_cycle2_w2/: run.sh
example/pimc_He_minimize/N3_cycle3_w0/: run.sh
example/pimc_He_minimize/N4_cycle4_w0/: run.sh
example/pimc_He_minimize/N64_cycle1/: run.sh
example/pimc_He_minimize/N64_cycle_large/: run.sh
example/pimc_minimize/: minimize_N64.py  vis-worldlines.ipynb  visualize_N64_minimization.ipynb
example/pimc_visualization/: README.md  minimize_N64.py  vis-worldlines.ipynb  visualize_N64_minimization.ipynb
jax_landscape/: __init__.py  energy_fun.py  hessian_analysis.py  local_minima.py  main.py  pimc_energy.py  pressure.py
jax_landscape/io/: __init__.py  pimc.py
jax_landscape/potentials/: __init__.py  aziz.py
md_differentials/: __init__.py  aziz1995.py  main.py
tests/: test_aziz1995.py  test_energy_fun.py  test_hessian_analysis.py  test_hessian_eigenvals.py  test_local_minima.py  test_pimc_energy.py  test_pimc_io.py  test_potentials_aziz.py  test_pressure.py
tests/test_data/: N64-cycle1.conf0.pos  aziz1995-N2-Nbeads3.json  aziz1995-N500-Nbeads1.json  aziz1995-N6-Nbeads1.json  aziz_cpp_reference.json  generate_aziz_reference.py
(+9 files in other folders)
